fixed a bug with the scrollbar

--- a/08-Gestão-de-academia/public/css/styles.css
+++ b/08-Gestão-de-academia/public/css/styles.css
@@ -15,7 +15,7 @@
 
 body {
     background-color: var(--primary-color);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .flex {
